# orijs

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  LOGGING.md  README.md  SECURITY.md  bunfig.toml  oxlint.json  package.json  tsconfig.json
__tests__/: preload.ts
benchmarks/: README.md  bun-vs-orijs.ts  cpu-profile-guards.ts  cpu-profile-server.ts  guard-overhead.ts  http-guard-comparison.ts  http-guard-rigorous.ts  jit-example.ts  micro-perf.ts  profile-guards.ts  profile-server.ts  run-all.ts  runner.ts  servers-for-bombardier.ts
docs/: _llms.md  architecture.md  bullmq.md  cache.md  config.md  core.md  events.md  logging.md  mapper.md  provider-contracts.md  utilities.md  validation.md  websocket.md  workflows.md
example/: package.json
guide/: 01-introduction.md  02-quick-start.md  03-core-concepts.md  04-controllers-and-routing.md  04-the-provider-architecture.md  05-controllers-and-routing.md  05-validation.md  06-guards-and-authentication.md  06-validation.md  07-guards-and-authentication.md  07-interceptors.md  08-configuration.md  08-interceptors.md  09-configuration.md  09-data-mapping.md  10-data-mapping.md  10-events.md  11-events.md  11-workflows.md  12-websockets.md  12-workflows.md  13-caching.md  13-websockets.md  14-caching.md  14-testing.md  15-advanced-patterns.md  15-logging.md  16-migration-from-nestjs.md  16-testing.md  17-advanced-patterns.md  17-api-reference.md  18-migration-from-nestjs.md  19-api-reference.md  README.md
tooling/orijs-compile/: Cargo.toml  README.md
tooling/orijs-compile/src/: main.rs
(+37 files in other folders)
